anhmv: - bổ sung quản lý kho - thay đổi dashboard backgournd

--- a/src/main/resources/cas.properties
+++ b/src/main/resources/cas.properties
@@ -81,9 +81,13 @@ menu.cataProcedureMngt=Danh m\u1ee5c th\u1ee7 t\u1ee5c
 #module quan ly tai san
 menu.repairMngt=Qu\u1ea3n l\u00fd \u0111\u1ecbnh m\u1ee9c nh\u00e2n c\u00f4ng
 menu.repairTypeMngt=Danh m\u1ee5c ch\u1ee7ng lo\u1ea1i xe
-menu.repairLaborMngt=\u0110\u1ecbnh m\u1ee9c nh\u00e2n c\u00f4ng s\u1eeda ch\u1eefa
-menu.mainten1LaborMngt=\u0110\u1ecbnh m\u1ee9c nh\u00e2n c\u00f4ng b\u1ea3o d\u01b0\u1ee1ng 1
-menu.mainten2LaborMngt=\u0110\u1ecbnh m\u1ee9c nh\u00e2n c\u00f4ng b\u1ea3o d\u01b0\u1ee1ng 2
+menu.repairLaborMngt=\u0110\u1ecbnh m\u1ee9c s\u1eeda ch\u1eefa
+menu.mainten1LaborMngt=\u0110\u1ecbnh m\u1ee9c b\u1ea3o d\u01b0\u1ee1ng 1
+menu.mainten2LaborMngt=\u0110\u1ecbnh m\u1ee9c b\u1ea3o d\u01b0\u1ee1ng 2
+
+menu.maintainSupplyMngt=\u0110\u1ecbnh m\u1ee9c v\u1eadt t\u01b0
+menu.maintainSupply1=\u0110\u1ecbnh m\u1ee9c b\u1ea3o d\u01b0\u1ee1ng 1
+menu.maintainSupply2=\u0110\u1ecbnh m\u1ee9c b\u1ea3o d\u01b0\u1ee1ng 2
 
 
 #module quan ly profile
@@ -125,7 +129,7 @@ header.unitMngt=stt#action#code#name#description
 header.providerMngt=stt#action#code#name#description
 header.assetMngt=stt#action#code#name#number#unit#assetType#assetGroup#assetClass#organization#employee#depreciationDate#provider#content#description
 #####
-header.materialMngt=stt#action#code#name#unit#materialType#provider#country#content#description
+header.materialMngt=stt#action#code#name#contractCode#price#quantity#unit#updatedTime
 ####
 header.maintenance0Mngt=stt#action#code#name#maintenanceType#assetCode#assetName#assetEmployee#assetOrganization#content#description
 header.maintenance1Mngt=stt#action#code#name#maintenanceType#assetCode#assetName#assetEmployee#assetOrganization#content#description
@@ -137,4 +141,5 @@ header.guideMgnt=stt#action#processGuideName#status
 #module quan ly nhan cong sua chua
 header.repairTypeMngt=stt#action#name
 header.repairLaborMngt=stt#action#name#level#type#quota#decreaseLevel
-header.profileMachineMngt=stt#action#code#name#type#country
+header.profileMachineMngt=stt#action#code#name#manufactoryName#type#employee
+header.maintainSub=stt#action#type#name#quantity#unit
