anhmv : sửa trang chủ, sửa lại theo yêu cầu khách hàng

--- a/src/main/resources/cas.properties
+++ b/src/main/resources/cas.properties
@@ -140,6 +140,6 @@ header.guideMgnt=stt#action#processGuideName#status
 
 #module quan ly nhan cong sua chua
 header.repairTypeMngt=stt#action#name
-header.repairLaborMngt=stt#action#name#level#type#quota#decreaseLevel
-header.profileMachineMngt=stt#action#code#name#manufactoryName#type#employee
-header.maintainSub=stt#action#type#name#quantity#unit
+header.repairLaborMngt=stt#name#level
+header.profileMachineMngt=stt#action#code#name#manufactoryName#type#organization#employee#insurance#registry#rubber#batteryReplace
+header.maintainSub=stt#name#unit
